src/test/ui/hrtb/hrtb-exists-forall-trait-invariant.stderr
error[E0277]: the trait bound `(): Trait<for<'b> fn(Cell<&'b u32>)>` is not satisfied
  --> $DIR/hrtb-exists-forall-trait-invariant.rs:28:11
   |
LL |     foo::<()>();
   |           ^^ the trait `Trait<for<'b> fn(Cell<&'b u32>)>` is not implemented for `()`
   |
   = help: the trait `Trait<fn(Cell<&'a u32>)>` is implemented for `()`
note: required by a bound in `foo`
  --> $DIR/hrtb-exists-forall-trait-invariant.rs:12:8
   |
LL | fn foo<T>()
   |    --- required by a bound in this
LL | where
LL |     T: Trait<for<'b> fn(Cell<&'b u32>)>,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
